@@ -22,7 +22,8 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Method;
 import java.security.Principal;
-import java.util.Collections;
+import java.util.Map;
+import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -79,17 +80,16 @@ class RequestMappingHandlerMappingTests {
 	void resolveEmbeddedValuesInPatterns() {
 		this.handlerMapping.setEmbeddedValueResolver(value -> "/${pattern}/bar".equals(value) ? "/foo/bar" : value);
 
-		String[] patterns = new String[] { "/foo", "/${pattern}/bar" };
+		String[] patterns = { "/foo", "/${pattern}/bar" };
 		String[] result = this.handlerMapping.resolveEmbeddedValuesInPatterns(patterns);
 
-		assertThat(result).isEqualTo(new String[] { "/foo", "/foo/bar" });
+		assertThat(result).containsExactly("/foo", "/foo/bar");
 	}
 
 	@Test
 	void pathPrefix() {
 		this.handlerMapping.setEmbeddedValueResolver(value -> "/${prefix}".equals(value) ? "/api" : value);
-		this.handlerMapping.setPathPrefixes(Collections.singletonMap(
-				"/${prefix}", HandlerTypePredicate.forAnnotation(RestController.class)));
+		this.handlerMapping.setPathPrefixes(Map.of("/${prefix}", HandlerTypePredicate.forAnnotation(RestController.class)));
 
 		Method method = ReflectionUtils.findMethod(UserController.class, "getUser");
 		RequestMappingInfo info = this.handlerMapping.getMappingForMethod(method, UserController.class);
@@ -102,8 +102,11 @@ class RequestMappingHandlerMappingTests {
 	void resolveRequestMappingViaComposedAnnotation() {
 		RequestMappingInfo info = assertComposedAnnotationMapping("postJson", "/postJson", RequestMethod.POST);
 
-		assertThat(info.getConsumesCondition().getConsumableMediaTypes().iterator().next().toString()).isEqualTo(MediaType.APPLICATION_JSON_VALUE);
-		assertThat(info.getProducesCondition().getProducibleMediaTypes().iterator().next().toString()).isEqualTo(MediaType.APPLICATION_JSON_VALUE);
+		Set<MediaType> consumableMediaTypes = info.getConsumesCondition().getConsumableMediaTypes();
+		Set<MediaType> producibleMediaTypes = info.getProducesCondition().getProducibleMediaTypes();
+
+		assertThat(consumableMediaTypes).singleElement().hasToString(MediaType.APPLICATION_JSON_VALUE);
+		assertThat(producibleMediaTypes).singleElement().hasToString(MediaType.APPLICATION_JSON_VALUE);
 	}
 
 	@Test // SPR-14988
@@ -111,7 +114,7 @@ class RequestMappingHandlerMappingTests {
 		RequestMappingInfo requestMappingInfo = assertComposedAnnotationMapping(RequestMethod.POST);
 
 		ConsumesRequestCondition condition = requestMappingInfo.getConsumesCondition();
-		assertThat(condition.getConsumableMediaTypes()).isEqualTo(Collections.singleton(MediaType.APPLICATION_XML));
+		assertThat(condition.getConsumableMediaTypes()).containsOnly(MediaType.APPLICATION_XML);
 	}
 
 	@Test // gh-22010
@@ -163,8 +166,8 @@ class RequestMappingHandlerMappingTests {
 				.isThrownBy(() -> this.handlerMapping.getMappingForMethod(method, controllerClass))
 				.withMessageContainingAll(
 					"Multiple @HttpExchange annotations found on " + controllerClass,
-					"@" + HttpExchange.class.getName(),
-					"@" + ExtraHttpExchange.class.getName()
+					HttpExchange.class.getSimpleName(),
+					ExtraHttpExchange.class.getSimpleName()
 				);
 	}
 
@@ -179,8 +182,8 @@ class RequestMappingHandlerMappingTests {
 				.isThrownBy(() -> this.handlerMapping.getMappingForMethod(method, controllerClass))
 				.withMessageContainingAll(
 					"Multiple @HttpExchange annotations found on " + method,
-					"@" + PostExchange.class.getName(),
-					"@" + PutExchange.class.getName()
+					PostExchange.class.getSimpleName(),
+					PutExchange.class.getSimpleName()
 				);
 	}
 
@@ -196,8 +199,8 @@ class RequestMappingHandlerMappingTests {
 				.withMessageContainingAll(
 					controllerClass.getName(),
 					"is annotated with @RequestMapping and @HttpExchange annotations, but only one is allowed:",
-					"@" + RequestMapping.class.getName(),
-					"@" + HttpExchange.class.getName()
+					RequestMapping.class.getSimpleName(),
+					HttpExchange.class.getSimpleName()
 				);
 	}
 
@@ -213,8 +216,8 @@ class RequestMappingHandlerMappingTests {
 				.withMessageContainingAll(
 					method.toString(),
 					"is annotated with @RequestMapping and @HttpExchange annotations, but only one is allowed:",
-					"@" + PostMapping.class.getName(),
-					"@" + PostExchange.class.getName()
+					PostMapping.class.getSimpleName(),
+					PostExchange.class.getSimpleName()
 				);
 	}
 
